change position to relative and use z-index and fix right margin

--- a/src/content/app/tools/blast/views/blast-form/BlastForm.scss
+++ b/src/content/app/tools/blast/views/blast-form/BlastForm.scss
@@ -4,11 +4,13 @@
   display: grid;
   grid-template-rows: auto auto minmax(0, 1fr);
   height: 100%;
+  position: relative;
 }
 
 .mainContainer {
   height: 100%;
   padding-left: 65px;
+  padding-right: 10px;
 }
 
 .mainContainerSmall {
@@ -36,9 +38,9 @@
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-  max-width: 1790px; //TODO: To replace with global variables for spaces on the blast form (see ENSWBSITES-1602)
+  max-width: 1770px; //TODO: To replace with global variables for spaces on the blast form (see ENSWBSITES-1602)
   margin-left: -2px;
-  padding: 2px 20px 20px 0;
+  padding: 20px 0 20px 0;
   background-color: white;
   position: sticky;
   top: 0px;
